# Mentis

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260313_0001_initial.py  20260316_0002_add_ollama_provider_enum.py  20260316_0003_fix_ollama_provider_enum_label.py  20260414_0004_add_evaluation_depth_to_provider_config.py  20260417_0005_add_groq_provider_enum.py  20260512_0006_add_group_auto_score_adjustment.py
backend/app/: main.py
backend/app/cli/: __init__.py  seed_demo.py  wait_for_db.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  assignment.py  base.py  enums.py  evaluation.py  instructor.py  preferences.py  provider.py  submission.py
backend/app/repositories/: audit_repository.py  dashboard_repository.py  evaluation_repository.py  group_repository.py  instructor_repository.py  preference_repository.py  provider_repository.py  submission_repository.py
backend/app/schemas/: audit.py  auth.py  common.py  dashboard.py  evaluations.py  groups.py  preferences.py  providers.py  submissions.py
backend/app/services/: audit_service.py  auth_service.py  dashboard_service.py  evaluation_batch_runner.py  evaluation_service.py  group_service.py  preference_service.py  provider_service.py  submission_service.py  upload_service.py  usage_limit_service.py
(+87 files in other folders)
