[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-project-evaluation-backend"
version = "0.1.0"
description = "Production-oriented FastAPI backend for the Automated Project Evaluation System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.14.1",
  "asyncpg>=0.30.0",
  "cryptography>=44.0.2",
  "email-validator>=2.2.0",
  "fastapi>=0.116.1",
  "greenlet>=3.1.1",
  "httpx>=0.28.1",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.6",
  "pydantic-settings>=2.8.1",
  "pypdf>=5.4.0",
  "python-docx>=1.1.2",
  "python-jose[cryptography]>=3.4.0",
  "python-multipart>=0.0.20",
  "slowapi>=0.1.9",
  "sqlalchemy>=2.0.39",
  "structlog>=25.2.0",
  "uvicorn[standard]>=0.34.0",
  "bcrypt>=4.0,<4.1",
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.11.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
